--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </p>
       </div>
       <div id="discord" class="discord social_media_card">
-        <a href="" target="_blank" title="Open Waifu Engine Discord in new tab">
+        <a href="https://discord.gg/HzfcQuMfu6" target="_blank" title="Open Waifu Engine Discord in new tab">
           <i class="fab fa-discord"></i>
         </a>
         <p>
