added discord link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <i class="fab fa-discord"></i>
         </a>
         <p>
-          Follow updates on <span class="waifu_engine">Discord</span>.
+          Follow updates on <span class="waifu_engine discord">Discord</span>.
         </p>
       </div>
       <div id="reddit" class="reddit social_media_card">
