added patreon link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section id="social_media" class="social_media">
       <div id="patreon" class="patreon social_media_card">
-        <a href="" target="_blank" title="Open Waifu Engine Patreon in new tab">
+        <a href="https://www.patreon.com/user?u=38226152" target="_blank" title="Open Waifu Engine Patreon in new tab">
           <i class="fab fa-patreon"></i>
         </a>
         <p>
