--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section id="social_media" class="social_media">
       <div id="patreon" class="patreon social_media_card">
-        <a href="https://www.patreon.com/user?u=38226152" target="_blank" title="Open Waifu Engine Patreon in new tab">
+        <a href="https://bit.ly/3u2T5Id" target="_blank" title="Open Waifu Engine Patreon in new tab">
           <i class="fab fa-patreon"></i>
         </a>
         <p>
@@ -38,19 +38,27 @@
         </p>
       </div>
       <div id="discord" class="discord social_media_card">
-        <a href="https://discord.gg/HzfcQuMfu6" target="_blank" title="Open Waifu Engine Discord in new tab">
+        <a href="https://bit.ly/3hI97om" target="_blank" title="Open Waifu Engine Discord in new tab">
           <i class="fab fa-discord"></i>
         </a>
         <p>
-          Follow updates on <span class="waifu_engine discord">Discord</span>.
+          Stay connected on <span class="waifu_engine">Discord</span>.
         </p>
       </div>
       <div id="reddit" class="reddit social_media_card">
-        <a href="https://www.reddit.com/r/WaifuEngine/" target="_blank" title="Open Waifu Engine subreddit in new tab">
+        <a href="https://bit.ly/3eVDzJW" target="_blank" title="Open Waifu Engine subreddit in new tab">
           <i class="fab fa-reddit-square"></i>
         </a>
         <p>
           Join our community on <span class="waifu_engine">Reddit</span>.
+        </p>
+      </div>
+      <div id="twitter" class="twitter social_media_card">
+        <a href="https://bit.ly/3eW6pK9" target="_blank" title="Open Waifu Engine subreddit in new tab">
+          <i class="fab fa-twitter-square"></i>
+        </a>
+        <p>
+          Follow updates on <span class="waifu_engine">Twitter</span>.
         </p>
       </div>
     </section>
