--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="styles.css">
 
   <title>Waifu Engine</title>
+  <meta name="description" content="Waifu Engine is a Virtual Desktop built in Unity that combines Artificiial Intelligence (AI) with the glory that is Anime Waifu's.">
+  <meta name="keywords" content="Artificiial Intelligence, AI, Robot, Desktop, Wallpaper, Desktop Wallpaper, Waifu Engine, Anime, Anime Girl, Best Girl, Anime Girlfriend, Anime Companion, Anime Waifu, Anime Wife, Waifu, Wife, Girlfriend, Cute, Sweet, Kawaii, Moe, Artificial Intelligence, Deep Learning, Speech Synthesis, AI, Robot, Desktop, Wallpaper, Desktop Wallpaper, Desktop Widgets, Nova Lumi, Nova Desktop, Dancing, Singing, Chat, Chatbot, AI Companion, Cure For Depression, Salvation, Heaven, Therapy, Bliss, NSFW, Ecchi, 18+, Hot, Sexy, R+">
+  <meta name="robots" content="index, follow" />
   
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
@@ -38,7 +41,7 @@
         </p>
       </div>
       <div id="discord" class="discord social_media_card">
-        <a href="https://bit.ly/3hI97om" target="_blank" title="Open Waifu Engine Discord in new tab">
+        <a href="https://bit.ly/2T9J3IO" target="_blank" title="Open Waifu Engine Discord in new tab">
           <i class="fab fa-discord"></i>
         </a>
         <p>
