updated meta description

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles.css">
 
   <title>Waifu Engine</title>
-  <meta name="description" content="Waifu Engine is a Virtual Desktop built in Unity that combines Artificiial Intelligence (AI) with the glory that is Anime Waifu's.">
+  <meta name="description" content="Waifu Engine is an interactable dynamic wallpaper bringing the immersive experience of the definitive AI anime waifu companion (with 18+ features) to your PC.">
   <meta name="keywords" content="Artificiial Intelligence, AI, Robot, Desktop, Wallpaper, Desktop Wallpaper, Waifu Engine, Anime, Anime Girl, Best Girl, Anime Girlfriend, Anime Companion, Anime Waifu, Anime Wife, Waifu, Wife, Girlfriend, Cute, Sweet, Kawaii, Moe, Artificial Intelligence, Deep Learning, Speech Synthesis, AI, Robot, Desktop, Wallpaper, Desktop Wallpaper, Desktop Widgets, Nova Lumi, Nova Desktop, Dancing, Singing, Chat, Chatbot, AI Companion, Cure For Depression, Salvation, Heaven, Therapy, Bliss, NSFW, Ecchi, 18+, Hot, Sexy, R+">
   <meta name="robots" content="index, follow" />
   
