updated keyword meta ttag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>Waifu Engine</title>
   <meta name="description" content="Waifu Engine is an interactable dynamic wallpaper bringing the immersive experience of the definitive AI anime waifu companion (with 18+ features) to your PC.">
-  <meta name="keywords" content="Artificiial Intelligence, AI, Robot, Desktop, Wallpaper, Desktop Wallpaper, Waifu Engine, Anime, Anime Girl, Best Girl, Anime Girlfriend, Anime Companion, Anime Waifu, Anime Wife, Waifu, Wife, Girlfriend, Cute, Sweet, Kawaii, Moe, Artificial Intelligence, Deep Learning, Speech Synthesis, AI, Robot, Desktop, Wallpaper, Desktop Wallpaper, Desktop Widgets, Nova Lumi, Nova Desktop, Dancing, Singing, Chat, Chatbot, AI Companion, Cure For Depression, Salvation, Heaven, Therapy, Bliss, NSFW, Ecchi, 18+, Hot, Sexy, R+">
+  <meta name="keywords" content="Artificiial Intelligence, AI, Robot, Desktop, Wallpaper, Desktop Wallpaper, Waifu Engine, Anime, Anime Girl, Best Girl, Anime Girlfriend, Anime Companion, Anime Waifu, Anime Wife, Waifu, Wife, Girlfriend, Cute, Sweet, Kawaii, Moe, Artificial Intelligence, Deep Learning, Speech Synthesis, AI, Robot, Desktop, Wallpaper, Desktop Wallpaper, Desktop Widgets, Nova Lumi, Nova Desktop, Dancing, Singing, Chat, Chatbot, AI Companion, Cure For Depression, Salvation, Heaven, Therapy, Bliss, NSFW, Ecchi, 18+, Hot, Sexy, R+, Waifu AI">
   <meta name="robots" content="index, follow" />
   
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
