--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="http://fonts.cdnfonts.com/css/norwester" rel="stylesheet">
+
+  <link rel="icon" href="assets/WaifuEngine_icon.ico">
   
   <link rel="stylesheet" href="setup.css">
   <link rel="stylesheet" href="styles.css">
