set up SCSS; fixed pathing

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 
   <link href="http://fonts.cdnfonts.com/css/norwester" rel="stylesheet">
 
-  <link rel="icon" href="assets/WaifuEngine_icon.ico">
+  <link rel="icon" href="styles/assets/WaifuEngine_icon.ico">
   
-  <link rel="stylesheet" href="setup.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./styles/scss/styles.css">
 
   <title>Waifu Engine</title>
   <meta name="description" content="Waifu Engine is an interactable dynamic wallpaper bringing the immersive experience of the definitive AI anime waifu companion (with 18+ features) to your PC.">
@@ -24,7 +23,7 @@
   <header class="wrapper">
     <div class="banner"></div>
     <div class="logo">
-      <img src="./assets/WE_icon.png" alt="logo image consisting of a W and E">
+      <img src="./styles/assets/WE_icon.png" alt="logo image consisting of a W and E">
     </div>
   </header>
   
