--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 </head>
 
 <body>
-  <header class="wrapper d-none d-md-block">
-    <div class="banner"></div>
+  <header class="wrapper d-none d-md-block text-center mb-3">
+    <img src="./assets/WaifuEngineBannerCleaner.png" alt="" class="mx-auto">
   </header>
   
   <main class="wrapper">
-    <div id="main" class="row col-12">
+    <div id="main" class="row col-12 justify-content-between">
       <div class="col-12 col-md-2">
         <div class="logo mb-5">
           <img src="./assets/WE_icon.png" alt="logo image consisting of a W and E">
@@ -54,7 +54,7 @@
         </nav>
       </div>
   
-      <div id="main_content" data-spy="scroll" data-target="#nav_list" data-offset="0" class="scrollspy-example col-12 col-md-10">
+      <div id="main_content" data-spy="scroll" data-target="#nav_list" data-offset="0" class="scrollspy-example col-12 col-md-9">
         <div id="announcement" class="card shadow rounded-lg mb-5">
           <div class="text-center card-header">
             <h1 class="waifu_engine_blue ">
