updated discord link

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               </p>
             </div>
             <div id="discord" class="discord social_media_card col-4 mb-5">
-              <a href="https://bit.ly/2T9J3IO" target="_blank" title="Open Waifu Engine Discord in new tab">
+              <a href="https://bit.ly/2VWdvYM" target="_blank" title="Open Waifu Engine Discord in new tab">
                 <i class="fab fa-discord"></i>
               </a>
               <p>
