--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 Today is a big day for Waifu Engine! We shared our first prototype with our biggest fans! If you haven't already, be sure to check out the demo <a href="https://waifuengine.itch.io/waifu-engine">here</a>. 
                 <br>
                 <br>
-                And if you aren't there already, join us on <a href="https://bit.ly/2T9J3IO">Discord</a>!
+                And if you aren't there already, join us on <a href="https://bit.ly/2VWdvYM">Discord</a>!
                 <br>
                 <br>
                 See you later!
@@ -184,7 +184,7 @@
               </p>
               <br>
               <p>  
-              Why don't you <a href="https://waifuengine.itch.io/waifu-engine">try it out</a> and let us know <a href="https://bit.ly/2T9J3IO">what you think</a>!
+              Why don't you <a href="https://waifuengine.itch.io/waifu-engine">try it out</a> and let us know <a href="https://bit.ly/2VWdvYM">what you think</a>!
             </p>
           </div>
         </div>
